Rename the hello-world example to bytescript, make an very basic initial JavaScript-like gramma for let/const/function statements, and update the sample error so so it shows a bogus error on let statements.

--- a/langium-config.json
+++ b/langium-config.json
@@ -1,11 +1,11 @@
 {
-    "projectName": "HelloWorld",
+    "projectName": "ByteScript",
     "languages": [{
-        "id": "hello-world",
-        "grammar": "src/language-server/hello-world.langium",
-        "fileExtensions": [".hello"],
+        "id": "bytescript",
+        "grammar": "src/language-server/bytescript.langium",
+        "fileExtensions": [".ts", ".bs"],
         "textMate": {
-            "out": "syntaxes/hello-world.tmLanguage.json"
+            "out": "syntaxes/bytescript.tmLanguage.json"
         }
     }],
     "out": "src/language-server/generated"
