--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,19 @@
 {
-  "compilerOptions": {
-    "target": "ES6",
-    "module": "commonjs",
-    "lib": ["ESNext"],
-    "sourceMap": true,
-    "outDir": "out",
-    "strict": true,
-    "noUnusedLocals": true,
-    "noImplicitReturns": true,
-    "noImplicitOverride": true,
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
-  },
-  "include": [
-     "src/**/*.ts"
-  ],
-  "exclude": [
-     "out",
-     "node_modules"
-  ]
+	"compilerOptions": {
+		"target": "ES6",
+		"module": "commonjs",
+		"lib": ["ESNext"],
+		"sourceMap": true,
+		"outDir": "out",
+		"strict": true,
+		"noUnusedLocals": true,
+		"noImplicitReturns": true,
+		"noImplicitOverride": true,
+		"moduleResolution": "node",
+		"esModuleInterop": true,
+		"skipLibCheck": true,
+		"forceConsistentCasingInFileNames": true
+	},
+	"include": ["src/**/*.ts"],
+	"exclude": ["out", "node_modules"]
 }
