--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,25 @@
 {
 	"compilerOptions": {
+		// Compiler setup
 		"target": "ES6",
 		"module": "commonjs",
 		"lib": ["ESNext"],
 		"sourceMap": true,
 		"outDir": "out",
-		"strict": true,
-		"noUnusedLocals": true,
-		"noImplicitReturns": true,
-		"noImplicitOverride": true,
 		"moduleResolution": "node",
 		"esModuleInterop": true,
 		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true
+		"forceConsistentCasingInFileNames": true,
+
+		// Type checking
+		"strict": true,
+		"noUnusedLocals": true,
+		"noImplicitReturns": true,
+		"noImplicitOverride": true
+
+		// Cannot leave this turned on yet. https://github.com/langium/langium/issues/960
+		// For now, turn it on, fix errors in our non-generated code, then turn it off.
+		// "importsNotUsedAsValues": "error"
 	},
 	"include": ["src/**/*.ts"],
 	"exclude": ["out", "node_modules"]
