--- a/package.json
+++ b/package.json
@@ -64,12 +64,15 @@
 	},
 	"devDependencies": {
 		"@types/node": "^14.17.3",
+		"@types/serialize-javascript": "^5.0.2",
 		"@types/vscode": "^1.56.0",
 		"@typescript-eslint/eslint-plugin": "^5.28.0",
 		"@typescript-eslint/parser": "^5.28.0",
 		"eslint": "^8.17.0",
 		"langium-cli": "~1.0.0",
 		"prettier": "^2.8.4",
+		"safe-stable-stringify": "^2.4.3",
+		"serialize-javascript": "^6.0.1",
 		"typescript": "^4.9.4"
 	}
 }
