ignore formatting of examples, they have differing syntax for testing

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,6 @@
 node_modules/
 out/
 package-lock.json
+
+# for now don't format examples, because we are testing grammar (which includes formatting) so we'll have mixed formatting.
+examples/
