--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
 	"bin": {
 		"bs": "./bin/cli.js"
 	},
-	"main": "./out/extension.js",
+	"Xmain": "./out/extension.js",
+	"main": "./extension.cjs",
 	"scripts": {
 		"vscode:prepublish": "npm run build && npm run lint",
 		"build": "tsc -b tsconfig.json",
@@ -64,6 +65,7 @@
 		"chalk": "^4.1.2",
 		"chevrotain": "^10.4.1",
 		"commander": "^8.0.0",
+		"deasync": "^0.1.28",
 		"langium": "~1.0.0",
 		"vscode-languageclient": "^8.0.2",
 		"vscode-languageserver": "^8.0.2",
