--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"test:browser": "npm run wtr"
 	},
 	"dependencies": {
+		"binaryen": "^113.0.0",
 		"chalk": "^4.1.2",
 		"chevrotain": "^10.4.1",
 		"commander": "^8.0.0",
@@ -67,7 +68,8 @@
 		"vscode-languageclient": "^8.0.2",
 		"vscode-languageserver": "^8.0.2",
 		"vscode-uri": "^3.0.2",
-		"wdeasync": "^0.1.118"
+		"wabt": "^1.0.32",
+		"wazum": "github:trusktr/wazum#simple-esm-dist-output"
 	},
 	"devDependencies": {
 		"@open-wc/testing": "^3.1.8",
@@ -77,11 +79,9 @@
 		"@typescript-eslint/parser": "^5.28.0",
 		"@web/dev-server-esbuild": "^0.4.1",
 		"@web/test-runner": "^0.16.1",
-		"binaryen": "^113.0.0",
 		"eslint": "^8.17.0",
 		"langium-cli": "~1.0.0",
 		"prettier": "^2.8.4",
-		"typescript": "^4.9.4",
-		"wabt": "^1.0.32"
+		"typescript": "^4.9.4"
 	}
 }
