--- a/compiler/.gitignore
+++ b/compiler/.gitignore
@@ -430,3 +430,16 @@ FodyWeavers.xsd
 *.exe
 *.out
 *.app
+
+# CMake
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
