--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.10)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "./bin")
 project(compiler)
-add_executable(compiler main.cpp)
+add_executable(bsc main.cpp)
