--- a/compiler/bsc.vcxproj.filters
+++ b/compiler/bsc.vcxproj.filters
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="17.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="C:\Users\3nigma\Code\bytescript\compiler\main.cpp">
+    <ClCompile Include="C:\Users\3nigma\Code\bytescript\compiler\src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
