--- a/compiler/.gitignore
+++ b/compiler/.gitignore
@@ -35,6 +35,8 @@ bld/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
+.vs/slnx.sqlite
+
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
@@ -443,3 +445,7 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
+*.vcxproj
+.vs\cmake.db
+*.db
+*.sqlite
