add an initial README.md, add 'bs' bin as alias of 'bytescript' bin, update CONTRIBUTING.md

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
 		"src"
 	],
 	"bin": {
-		"bs": "./bin/cli.js"
+		"bs": "./bin/cli.js",
+		"bytescript": "./bin/cli.js"
 	},
 	"main": "./out/extension.js",
 	"scripts": {
