Switch to Playwright for web-test-runner browser tests. We run Chromium, Firefox, and Webkit in Linux and macOS, and in Windows we run only Chromium and Firefox because Webkit has no WebAssembly in Windows. We currently cannot run Edge in any OS (https://github.com/microsoft/playwright/issues/23783).

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,7 @@ jobs:
                   npm install
                   npm run langium:generate
                   npm run build
+                  npx playwright install --with-deps chromium firefox webkit msedge
                   npm test
               env:
                   CI: true
