--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
 		"@typescript-eslint/parser": "^5.28.0",
 		"@web/dev-server-esbuild": "^0.4.1",
 		"@web/test-runner": "^0.16.1",
+		"@web/test-runner-playwright": "^0.10.1",
 		"eslint": "^8.17.0",
 		"langium-cli": "~1.0.0",
 		"prettier": "^2.8.4",
